Update：Tags寫法，熱銷基金排序問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -29,10 +29,10 @@
 								{
 									<div class="l-target__additional">
 										<ul class="l-tag">
-											@for (var i = 0; i < item.ETFDiscountTags.Length; i++)
+											@foreach (var tag in item.ETFDiscountTags)
 											{
 												<li class="l-tag__item">
-													<span class="o-tag"> @item.ETFDiscountTags[i]</span>
+													<span class="o-tag">@tag</span>
 												</li>
 											}
 										</ul>
