--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRankReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRankReturn.cshtml
@@ -23,10 +23,10 @@
 						{
 							<div class="l-target__additional">
 								<ul class="l-tag">
-									@for (var i = 0; i < item.Tags.Count; i++)
+									@foreach (var tag in item.Tags)
 									{
 										<li class="l-tag__item">
-											<span class="o-tag">@item.Tags[i] </span>
+											<span class="o-tag">@tag</span>
 										</li>
 									}
 								</ul>
