ETF 搜尋頁－網址參數 keyword 及標籤搜尋

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -82,6 +82,50 @@
                 });
             }
 
+            function checkKeywordQueryString() {
+                let params = new URLSearchParams(window.location.search);
+                let urlParams = new URLSearchParams();
+
+                for (const [key, value] of params) {
+                    urlParams.append(key.toLowerCase(), decodeURIComponent(value));
+                }
+
+                function queryKeyword(key) {
+                    if (urlParams.has(key)) {
+                        let keywordValue = DOMPurify.sanitize(urlParams.get(key));
+                        $('[data-keyword-input]').val(keywordValue);
+                        $('[data-keyword-submit]').trigger('click');
+                    }
+                }
+
+                function queryAdvanced(key, selector) {
+                    if (urlParams.has(key)) {
+                        let paramVal = DOMPurify.sanitize(urlParams.get(key));
+                        let values = paramVal.split(',');
+
+                        $(selector).each(function(i, item) {
+                            let $self = $(this);
+                            let filterVal = $self.val();
+
+                            let isMatch = values.some(function (item) {
+                                return filterVal === item;
+                            });
+
+                            if (isMatch) {
+                                $self.trigger('click');
+                            }
+                        });
+                    }
+                }
+
+                // 關鍵字
+                queryKeyword('keyword');
+                // 熱門關鍵字
+                queryAdvanced('hotkeyword', '#uid-criteria-keywordsTags :checkbox');
+                // 熱門主題
+                queryAdvanced('hotproduct', '#uid-criteria-categoryTags :checkbox');
+            }
+
             const propertyResetObj = [
                 'InceptionDateMarketPriceOriginalCurrency'
                 , 'YeartoDateReturnMarketPriceOriginalCurrency'
@@ -552,6 +596,8 @@
 
                         $('[data-tab] [data-tab-target]:first').trigger('switch');
                         $('[data-filter-switch="#uid-template-marketPrice-original"]').trigger('change');
+                    }).then(() => {
+                        checkKeywordQueryString();
                     });
                 },
                 GenerateSearchKeywordList: function () {
@@ -579,9 +625,6 @@
                     }
                 }
             };
-
-            initBind();
-            window.ETFSearch.QueryList();
 
             $('[data-tab-currency]').on('change', function () {
                 var currency = $(this).data('tab-currency');
@@ -665,6 +708,9 @@
                     }
                 }
             });
+
+            initBind();
+            window.ETFSearch.QueryList();
         });
     })(jQuery, window, document);
 </script>
