update: 調整右上角鈴鐺顯示 update: 風險評估外開 update: ileo關注清單log

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -55,12 +55,12 @@
                                         @if (!string.IsNullOrEmpty(member.Risk))
                                         {
                                             <b>@member.Risk</b>
-                                            <a href="@WebKycLink" class="o-link t4 u-hidden" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="@WebKycLink" target="_blank" class="o-link t4 u-hidden" id="GoKYC">進行風險屬性評估</a>
 
                                         }
                                         else
                                         {
-                                            <a href="@WebKycLink" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="@WebKycLink" target="_blank" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
                                         }
                                     </div>
                                 </div>
