fix: 基金詳細頁、側邊工具 bug fix

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -376,7 +376,7 @@
                                             <div class="c-rankingCard">
                                                 <div class="c-rankingCard__num"><span>@count</span></div>
                                                 <div class="c-rankingCard__name">
-                                                    <a href="@(detailsUrl+" ?id=" + item.FirstBankCode)" class="o-contentLink t-bold u-ellipsis-2">@item.FirstBankCode @item.FundName</a>
+                                                    <a href="@(detailsUrl+"?id=" + item.FirstBankCode)" class="o-contentLink t-bold u-ellipsis-2">@item.FirstBankCode @item.FundName</a>
                                                 </div>
                                                 <div class="c-rankingCard__data">
                                                     <ul class="l-divideList l-divideList--closely@dt-only">
@@ -567,7 +567,7 @@
                                     <div id="trendChart"></div>
                                 </div>
                             </div>
-                            <div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="trend">2023/09/13</span></div>
+                            @*<div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="trend">2023/09/13</span></div>*@
                         </div>
                     </div>
                 </div>
