--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -572,7 +572,7 @@
                                     <div id="trendChart"></div>
                                 </div>
                             </div>
-                            <div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="trend">2023/09/13</span></div>
+                            @*<div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="trend">2023/09/13</span></div>*@
                         </div>
                     </div>
                 </div>
