--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -17,10 +17,10 @@
                     <div class="l-selectbox__item">
                         <select class="o-selectbox o-selectbox--full o-selectbox--form" data-width="100%" data-selection-css-class="select2-selection--form" data-selectbox="true" id="MailInfoType_criteria">
                             <option value="all">全部通知</option>
-                            <option value="@MailInfoTypeEnum.到價通知.ToString()">到價通知</option>
-                            <option value="@MailInfoTypeEnum.理顧預約.ToString()">理顧預約</option>
-                            <option value="@MailInfoTypeEnum.專屬優惠.ToString()">專屬優惠</option>
-                            <option value="@MailInfoTypeEnum.週月報.ToString()">週月報</option>
+                            <option value="@MailInfoTypeEnum.到價通知.ToString()">@MailInfoTypeEnum.到價通知.ToString()</option>
+                            <option value="@MailInfoTypeEnum.理顧預約.ToString()">@MailInfoTypeEnum.理顧預約.ToString()</option>
+                            <option value="@MailInfoTypeEnum.專屬優惠.ToString()">@MailInfoTypeEnum.專屬優惠.ToString()</option>
+                            <option value="@MailInfoTypeEnum.週月報.ToString()">@MailInfoTypeEnum.週月報.ToString()</option>
                         </select>
                     </div>
                 </div>
