Update：ETF 搜尋新增排序欄位 - 交易所代碼(ExchangeCode)

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -77,6 +77,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -136,6 +138,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="最新淨值高至低" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-desc">最新淨值高至低</option>
                                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-asc">最新淨值低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -183,6 +187,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="風險屬性RR5至RR1" data-sorting-column="RiskLevel.Value" data-sorting-class="is-desc">風險屬性RR5至RR1</option>
@@ -219,6 +225,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="最新淨值高至低" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-desc">最新淨值高至低</option>
                                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-asc">最新淨值低至高</option>
                                     <option value="風險屬性RR5至RR1" data-sorting-column="RiskLevel.Value" data-sorting-class="is-desc">風險屬性RR5至RR1</option>
@@ -255,6 +263,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價低至高</option>
                                     <option value="折溢價高至低" data-sorting-column="DiscountPremium.Value" data-sorting-class="is-asc">折溢價高至低</option>
@@ -289,6 +299,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -318,6 +330,8 @@
                 <option value="">排序</option>
                 <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                 <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                 <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                 <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                 <option value="最新淨值高至低" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-desc">最新淨值高至低</option>
@@ -416,14 +430,13 @@
                         <th @*data-table-name="marketPriceTable,netWorthTable,marketRiskTable,netWorthRiskTable,tradeTable,baseTable"*@>
                             <div class="c-table__title">
                                 <span>ETF名稱</span>
-                                <!-- .is-asc: 升冪 -->
-                                <!-- .is-desc: 降冪 -->
                                 <a href="#" class="o-sorting" data-sorting-column="FirstBankCode"></a>
                             </div>
                         </th>
                         <th @*data-table-name="marketPriceTable,netWorthTable,marketRiskTable,netWorthRiskTable,tradeTable,baseTable"*@>
                             <div class="c-table__title">
                                 <span>交易所代碼</span>
+                                <a href="#" class="o-sorting" data-sorting-column="ExchangeCode.Value"></a>
                             </div>
                         </th>
                         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
