--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
@@ -321,6 +321,8 @@
                                     <option value="">排序</option>
                                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -375,6 +377,7 @@
                                     <th>
                                         <div class="c-table__title">
                                             <span>交易所代碼</span>
+                                            <a href="#" class="o-sorting" data-sorting-column="ExchangeCode.Value"></a>
                                         </div>
                                     </th>
                                     @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
@@ -506,6 +509,8 @@
                     <option value="">排序</option>
                     <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
                     <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
+                    <option value="交易所代碼高至低" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-desc">交易所代碼高至低</option>
+                    <option value="交易所代碼低至高" data-sorting-column="ExchangeCode.Value" data-sorting-class="is-asc">交易所代碼低至高</option>
                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
