fix : 漲跌設定加入臺灣樣式

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
@@ -23,8 +23,8 @@
                         </td>
                         <td>
                             <div class="l-slash">
-                                <div class="l-slash__item"><span class="o-rise">1.00%</span></div>
-                                <div class="l-slash__item"><span class="o-fall">1.00%</span></div>
+                                <div class="l-slash__item"><span class="o-rise o-rise--tw">1.00%</span></div>
+                                <div class="l-slash__item"><span class="o-fall o-fall--tw">1.00%</span></div>
                             </div>
                         </td>
                     </tr>
