--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
@@ -43,20 +43,20 @@
                 closeOnBgClick: false,
                 callbacks: {
                     afterClose: function () {
-                        window.location.href = '@Model.ReturnLink';
+                        window.location.href = new URL('@Model.ReturnLink');
                     }
                 }
             });
         }
         else {
-            window.location.href = '@Model.ReturnLink';
+            window.location.href = new URL('@Model.ReturnLink');
         }
     });
 
     $('[data-return]').on('click', function (e) {
         e.preventDefault();
 
-        window.location.href = '@Model.ReturnLink';
+        window.location.href = new URL('@Model.ReturnLink');
     });
 </script>
 
